--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-   "start": "nodemon App.js"
+    "start": "nodemon App.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
+    "node": "^23.7.0"
   }
 }
